tests/errors/catchable/catch_type.zy
!? {
    x = ##."not a number"
    >> x ¶
} :! {
    >> "caught: cast error" ¶
}
>> "continues" ¶
